Modified app.js & package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "41.-project---phase-1-(part-a)",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
