--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "41.-project---phase-1-(part-a)",
+  "engines": {
+    "node": "18.17.1"
+  },
+  "name": "GlideAway",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,8 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
-    "cloudinary": "^2.0.1",
+    "cloudinary": "^2.0.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
